# NUGETs

./: .gitignore  .update_package.sh  ConvexHullMembership.ipynb  Dockerfile  Dockerfile.slimmer  NearestNeighborRegressionTask.ipynb  README.rst  example-command.txt  nugets.sh  nugets_production.sh  pyproject.toml  requirements.txt  run_with_local_index.sh  test_train_command.sh  testing.py  usage-example.txt
CGAL/: CGAL_AABB_tree.py  CGAL_AABB_treePYTHON_wrap.cxx  CGAL_Advancing_front_surface_reconstruction.py  CGAL_Advancing_front_surface_reconstructionPYTHON_wrap.cxx  CGAL_Alpha_shape_2.py  CGAL_Alpha_shape_2PYTHON_wrap.cxx  CGAL_Alpha_wrap_3.py  CGAL_Alpha_wrap_3PYTHON_wrap.cxx  CGAL_Bounding_volumes.py  CGAL_Bounding_volumesPYTHON_wrap.cxx  CGAL_Box_intersection_d.py  CGAL_Box_intersection_dPYTHON_wrap.cxx  CGAL_Convex_hull_2.py  CGAL_Convex_hull_2PYTHON_wrap.cxx  CGAL_Convex_hull_3.py  CGAL_Convex_hull_3PYTHON_wrap.cxx  CGAL_HalfedgeDS.py  CGAL_HalfedgeDSPYTHON_wrap.cxx  CGAL_Interpolation.py  CGAL_InterpolationPYTHON_wrap.cxx  CGAL_Kernel.py  CGAL_KernelPYTHON_wrap.cxx  CGAL_Mesh_2.py  CGAL_Mesh_2PYTHON_wrap.cxx  CGAL_Mesh_3.py  CGAL_Mesh_3PYTHON_wrap.cxx  CGAL_Point_set_3.py  CGAL_Point_set_3PYTHON_wrap.cxx  CGAL_Polyhedron_3.py  CGAL_Polyhedron_3PYTHON_wrap.cxx  CGAL_Polyline_simplification_2.py  CGAL_Polyline_simplification_2PYTHON_wrap.cxx  CGAL_Spatial_searching.py  CGAL_Spatial_searchingPYTHON_wrap.cxx  CGAL_Surface_mesher.py  CGAL_Surface_mesherPYTHON_wrap.cxx  CGAL_Test.py  CGAL_TestPYTHON_wrap.cxx  CGAL_Triangulation_2.py  CGAL_Triangulation_3.py  (+4 more)
docs/source/: cloud_integration.rst  conf.py  index.rst  reference.rst  running.rst
nugets/: __init__.py  __main__.py  misc.py
nugets/datasets/: __init__.py  data_transforms.py  datapoint_types.py  dataset_utils.py  geometric_shapes.py  lidar.py  modelnet.py  register.py  shapenet.py  squid.py  terrains.py  trajectories.py
nugets/losses/: __init__.py  losses.py
nugets/models/: __init__.py  backbone.py  model.py
nugets/models/backbones/: __init__.py  epsilon_kernel_nets.py  gnns.py  performer.py  query_nns.py  register.py  set_nn.py  siamese.py  sumformer.py  transformer.py
nugets/models/encoder_decoders/: distances.py  identity.py  queries.py  set_membership.py  shapefitting.py
nugets/models/transforms/: __init__.py  ape.py  register.py  transform.py
nugets/pipeline/: __init__.py  configs.py  pipeline.py
nugets/tasks/: __init__.py  alpha_shape_task.py  convex_hull_task.py  distance_tasks.py  dummy_tasks.py  geometric_primitive_tasks.py  register.py  set_membership_tasks.py  shapefitting_tasks.py  task.py  transforms.py  utils.py
static_configs/datasets/: dummy_growing_circles.yaml  gaussian_blobs.yaml  modelnet10.yaml  modelnet40.yaml
static_configs/single_runs/: Wasserstein_GrowingCircles_siamese_sumformer.yaml  convex-hull-membership.yaml  dummy-task-test-run.yaml  nearest_neighbor_query.yaml  range-search-task.yaml  single-label-dummy-task.yaml  test-mea.yaml  test-meb.yaml  test_run.yaml  test_run2.yaml
static_configs/single_runs/alpha-shapes/GaussianBlob/: MLP.yaml  Performer.yaml  sumformer.yaml  transformer.yaml
static_configs/single_runs/alpha-shapes/SQUID/: MLP.yaml
static_configs/single_runs/convex-hull/GaussianBlob/: Performer.yaml  sumformer.yaml  transformer.yaml
static_configs/single_runs/convex-hull/SQUID/: sumformer.yaml  transformer.yaml
static_configs/single_runs/distance-tasks/: Hausdorff_GrowingCircles_dim2_MLP_sumformer.yaml  Hausdorff_GrowingCircles_dim2_MLP_transformer.yaml  Hausdorff_GrowingCircles_dim2_siamese_sumformer.yaml  Hausdorff_GrowingCircles_dim2_siamese_transformer.yaml  Wasserstein_GrowingCircles_dim2_MLP_sumformer.yaml  Wasserstein_GrowingCircles_dim2_MLP_transformer.yaml  Wasserstein_GrowingCircles_dim2_siamese_sumformer.yaml  Wasserstein_GrowingCircles_dim2_siamese_transformer.yaml  Wasserstein_ModelNet10_siamese_sumformer.yaml
static_configs/single_runs/distance-tasks/GaussianBlob2/: Hausdorff_GaussianBlob_dim2_MLP_sumformer.yaml  Hausdorff_GaussianBlob_dim2_MLP_transformer.yaml  Hausdorff_GaussianBlob_dim2_siamese_sumformer.yaml  Hausdorff_GaussianBlob_dim2_siamese_transformer.yaml  Wasserstein_GaussianBlob_dim2_MLP_sumformer.yaml  Wasserstein_GaussianBlob_dim2_MLP_transformer.yaml  Wasserstein_GaussianBlob_dim2_siamese_sumformer.yaml  Wasserstein_GaussianBlob_dim2_siamese_transformer.yaml  dH_MLP_deepsets.yaml  dH_MLP_pointnet.yaml  dH_MLP_sumformer_max.yaml  dH_MLP_sumformer_mean.yaml  dH_MLP_sumformer_sum.yaml  dH_MLP_transformer_max.yaml  dH_MLP_transformer_mean.yaml  dH_MLP_transformer_sum.yaml  dH_siamese_deepsets.yaml  dH_siamese_pointnet.yaml  dH_siamese_sumformer_max.yaml  dH_siamese_sumformer_mean.yaml  dH_siamese_sumformer_sum.yaml  dH_siamese_transformer_max.yaml  dH_siamese_transformer_mean.yaml  dH_siamese_transformer_sum.yaml  dW_MLP_deepsets.yaml  dW_MLP_pointnet.yaml  dW_MLP_sumformer_max.yaml  dW_MLP_sumformer_mean.yaml  dW_MLP_sumformer_sum.yaml  dW_MLP_transformer_max.yaml  dW_MLP_transformer_mean.yaml  dW_MLP_transformer_sum.yaml  dW_siamese_deepsets.yaml  dW_siamese_sumformer_max.yaml  dW_siamese_sumformer_mean.yaml  dW_siamese_sumformer_sum.yaml  dW_siamese_transformer_max.yaml  dW_siamese_transformer_mean.yaml  dW_siamese_transformer_sum.yaml
static_configs/single_runs/distance-tasks/Langevin/: MLP_deepsets.yaml  MLP_pointnet.yaml  MLP_transformer_max.yaml  MLP_transformer_mean.yaml  MLP_transformer_sum.yaml  dH_MLP_deepsets.yaml  dH_MLP_pointnet.yaml  dH_MLP_sumformer_max.yaml  dH_MLP_sumformer_mean.yaml  (+25 more)
static_configs/sweeps/: Wasserstein_GrowingCircles_dim2_MLP_sumformer.yaml  Wasserstein_GrowingCircles_dim2_MLP_transformer.yaml  Wasserstein_GrowingCircles_dim2_siamese_sumformer.yaml  Wasserstein_GrowingCircles_dim2_siamese_transformer.yaml  Wasserstein_ModelNet10_siamese_sumformer.yaml  Wasserstein_ModelNet10_siamese_transformer.yaml  extremal_points_sf.yaml  test_sweep.yaml  test_sweep_1.yaml  test_sweep_3.yaml
tests/: test_custom_arg_parser.py  test_distance_tasks.py  test_models.py  test_shapefitting.py
(+74 files in other folders)
