[project]
name = "nugets"
version = "0.1.0"
description = "NeUral GEomeTry — benchmarking neural networks on geometric tasks"
readme = "README.rst"
requires-python = ">=3.11"
authors = [{name="Tristan Brugère",  email="<tbrugere@ucsd.edu>"}, 
            {name="Samantha Chen", email="<srchen98@gmail.com>"}]
dependencies = [
    "setuptools>=75.8.0",
    "lightning>=2.5.0.post0",
    "ml-lib",
    "torch-heterogeneous-batching",
    "torch>=2.5.1",
    "torch_scatter",
    "torch_geometric",
    "pot>=0.9.5",
    "geomloss[full]>=0.2.6",
    "pyyaml>=6.0.2",
    "pydantic>=2.10.6",
    "wandb>=0.19.6",
    "google-cloud-storage>=3.1.0",
    "gcsfs>=2025.2.0",
    "fsspec[gcs]>=2025.2.0",
    "shapely>=2.1.1",
]

[dependency-groups]
doc = [
    "sphinx>=8.1.3",
    "sphinx-pyproject>=0.3.0",
    "sphinx-rtd-theme>=3.0.2",
]
dev = [
    "git-autocommit-hook>=0.1.2",
    "ruff>=0.9.3",
    "ruff-lsp>=0.0.60",
    "neovim", # required to build torch_scatter and neovim
    "setuptools",
    "ipython>=8.32.0",
]
test = [
    "pytest>=8.3.4",
]
# this is because setuptools needs to be pre-installed to avoid erros
# building torch_scatter pykeops and others
build-tools = [
    "cython>=3.1.2",
    "numpy>=1.26.4",
    "poetry>=2.1.3",
    "setuptools>=75.8.0",
    "torch>=2.6.0",
]

[tool.sphinx-pyproject]
extensions = [
    'sphinx.ext.autodoc',
    'sphinx.ext.napoleon',
    'sphinx.ext.viewcode',
    'sphinx.ext.autosummary',
    'sphinx_rtd_theme',
]
html_theme = 'sphinx_rtd_theme'
html_static_path = ['_static']

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.uv.sources]
ml-lib = { git = "https://github.com/tbrugere/ml_lib.git", rev = "devel" }
torch-heterogeneous-batching = { git = "https://github.com/tbrugere/pytorch_heterogeneous_batching.git", rev = "main" }
geomloss = { git = "https://github.com/tbrugere/geomloss", rev = "batching" }
torch = { index= "pytorch" }

# torch_scatter = [
#     { url = "https://data.pyg.org/whl/torch-2.5.0%2Bcu124/torch_scatter-2.1.2%2Bpt25cu124-cp311-cp311-linux_x86_64.whl", marker="sys_platform == 'linux' and platform_machine == 'x86_64'" }
# ]

[[tool.uv.index]]
name = "torch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-scatter-cu124"
url = "https://data.pyg.org/whl/torch-2.5.0+cu124.html"
explicit = true

[tool.pytest.ini_options]
pythonpath = ["."]
