[project]
name = "nugets"
version = "0.1.0"
description = "NeUral GEomeTry Suite — benchmarking neural networks on geometric tasks"
readme = "README.rst"
requires-python = ">=3.11"
authors = [{name="Tristan Brugère",  email="<tbrugere@ucsd.edu>"}, 
            {name="Samantha Chen", email="<srchen98@gmail.com>"}]
dependencies = [
    "setuptools>=75.8.0",
    "lightning>=2.5.0.post0",
    "torch_geometric",
    "pot>=0.9.5",
    "pyyaml>=6.0.2",
    "pydantic>=2.10.6",
    "wandb>=0.19.6",
    "google-cloud-storage>=3.1.0",
    "gcsfs>=2025.2.0",
    "fsspec[gcs]>=2025.2.0",
    "shapely>=2.1.1",
    "flash-attn",
    "ml-lib",
    "torch-heterogeneous-batching",
    "torch_scatter",
    "geomloss[full]>=0.2.6",
]

[dependency-groups]
doc = [
    "sphinx>=8.1.3",
    "sphinx-pyproject>=0.3.0",
    "sphinx-rtd-theme>=3.0.2",
]
dev = [
    "git-autocommit-hook>=0.1.2",
    "ruff>=0.9.3",
    "ruff-lsp>=0.0.60",
    "neovim", # required to build torch_scatter and neovim
    "setuptools",
    "ipython>=8.32.0",
]
test = [
    "pytest>=8.3.4",
]
# this is because setuptools needs to be pre-installed to avoid erros
# building torch_scatter pykeops and others
build-tools = [
    "cython>=3.1.2",
    "numpy>=1.26.4",
    "poetry>=2.1.3",
    "psutil",
    "setuptools>=75.8.0",
    "torch>=2.5.1",
]

[project.optional-dependencies]
cu124 = [
    "torch==2.6.0+cu124; sys_platform == 'linux' and platform_machine == 'x86_64'", 
    # no need to use pre built, just build it from source...
    # there is no aarch64 build anyway
    # "torch_scatter==2.1.2+pt26cu124", 
]

cu128 = [
    "torch==2.7.0+cu128", 
    # "torch_scatter==2.1.2+pt27cu128", 
]


[tool.sphinx-pyproject]
extensions = [
    'sphinx.ext.autodoc',
    'sphinx.ext.napoleon',
    'sphinx.ext.viewcode',
    'sphinx.ext.autosummary',
    'sphinx_rtd_theme',
]
html_theme = 'sphinx_rtd_theme'
html_static_path = ['_static']

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.uv]
conflicts = [
    [{extra="cu128"}, {extra="cu124"}]
    ]
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64' and python_version == '3.13'",
]
index-strategy = "unsafe-best-match"
# no-build-isolation-package = ["flash-attn", "torch-scatter"]

[tool.uv.sources]
ml-lib = { git = "https://github.com/tbrugere/ml_lib.git", rev = "devel" }
torch-heterogeneous-batching = { git = "https://github.com/tbrugere/pytorch_heterogeneous_batching.git", rev = "main" }
geomloss = { git = "https://github.com/tbrugere/geomloss", rev = "batching" }
# triton = [
#     { index= "torch-cu124", marker="platform_machine == 'amd64'"}, 
#     { index= "torch-cu128", marker="platform_machine == 'aarch64'" }
# ]
torch = [
    { index= "torch-cu124", extra="cu124"}, 
    { index = "torch-cu128", extra="cu128" }
]
flash_attn = [
    {index = "local", marker = "platform_machine == 'aarch64'"}
]
# # torch_scatter = [
# #     { url = "https://data.pyg.org/whl/torch-2.5.0%2Bcu124/torch_scatter-2.1.2%2Bpt25cu124-cp311-cp311-linux_x86_64.whl", marker="sys_platform == 'linux' and platform_machine == 'x86_64'" }
# # ]

[[tool.uv.index]]
# this repo has all the torch version
name = "local"
url = "http://localhost:20284/simple"


# [[tool.uv.index]]
# # this repo has all the torch version
# name = "torch-full"
# url = "https://download.pytorch.org/whl/"

[[tool.uv.index]]
name = "torch-cu128"
url = "https://download.pytorch.org/whl/cu128"

# [[tool.uv.index]]
# name = "pytorch-scatter-cu128"
# url = "https://data.pyg.org/whl/torch-2.7.0%2Bcu128.html"

[[tool.uv.index]]
name = "torch-cu124"
url = "https://download.pytorch.org/whl/cu124"

# [[tool.uv.index]]
# name = "pytorch-scatter-cu124"
# url = "https://data.pyg.org/whl/torch-2.6.0%2Bcu124.html"

[tool.uv.extra-build-dependencies]
torch-scatter = ["torch"]
flash-attn = ["torch"]

[[tool.uv.dependency-metadata]]
name="flash-attn"
requires-dist = ["torch", "einops"]

[[tool.uv.dependency-metadata]]
name="torch-scatter"
requires-dist = ["torch"]

[tool.pytest.ini_options]
pythonpath = ["."]
